# federcanoa-tracker

./: .gitignore  Makefile  README.md  pyproject.toml
src/: cli.py  config.example.json  config.json  known_courses.json  monitor.py
