[tool.poetry]
name = "federcanoa-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.12.3"
click = "8.1.8"
loguru = "0.7.3"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
monitor = "src.cli:main"